--- a/package.json
+++ b/package.json
@@ -8,8 +8,24 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/css": "^11.1.3",
+    "@hookform/resolvers": "^2.4.0",
+    "axios": "^0.21.1",
+    "cookie": "^0.4.1",
+    "cookie-cutter": "^0.2.0",
+    "js-cookie": "^2.2.1",
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "next": "10.2.0",
+    "next-auth": "^3.23.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-google-login": "^5.2.2",
+    "react-hook-form": "^7.5.3",
+    "react-icons": "^4.2.0",
+    "yup": "^0.32.9"
+  },
+  "devDependencies": {
+    "@types/cookie": "^0.4.0"
   }
 }
