--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "js-cookie": "^2.2.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
-    "next": "10.2.0",
+    "next": "^12.1.6",
     "next-auth": "^3.23.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-google-login": "^5.2.2",
-    "react-hook-form": "^7.5.3",
+    "react-hook-form": "^7.31.1",
     "react-icons": "^4.2.0",
     "yup": "^0.32.9"
   },
